module(name = "aoc")

bazel_dep(name = "fmt", version = "10.1.1")
bazel_dep(name = "doctest", version = "2.4.11")
bazel_dep(name = "hermetic_cc_toolchain", version = "2.1.3")
bazel_dep(name = "nlohmann_json", repo_name = "json", version = "3.11.3")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
)
